[package]
name = "file-encryptr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
argon2 = "0.5.3"
bincode = "1.3.3"
blake3 = "1.5.4"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.21", features = ["derive"] }
hex = "0.4.3"
okaywal = "0.3.1"
rand = "0.8.5"
rayon = "1.10.0"
rpassword = "7.3.1"
serde = { version = "1.0.215", features = ["derive"] }
shush-rs = "0.1.11"
thiserror = "2.0.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name="bench"
harness = false
